style.css
@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@500&display=swap');
*{
    margin: 0;
    font-family: 'Source Code Pro', monospace;

}

.background {
    background-image: url("code-background.jpg");

    height: 100vw; 

  /* Center and scale the image nicely */
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;background-image: url(code-background.jpg);
}

body {
    overflow: hidden; /* Hide scrollbars */
    width: auto
}

.hyperlink {
    text-decoration: none;
    
    color: rgb(142, 211, 15);
    transition: 300ms;
    :hover {
        color: rgb(236, 228, 228);
        transition: 300ms;
    }
}

@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');

html {
    background-color: black;
    width: 100vw;
    height: 100vh;  
}

.navbar {
    display: flex;
    justify-content: left;
    align-items: center;
    transition: 1000ms;
    background-color: rgb(85, 85, 85);
    :hover {
        transition: 1000ms;
    }
}

.textbodybox {
    display: flex-block;
    width: 100vw;
    margin-left: 1vw;
    color: white;
}

h1 {
    color: rgb(142, 211, 15);
    font-family: 'Source Code Pro', monospace;
    font-size: 3vw;
    justify-content: center;
}

p {
    color: rgb(236, 228, 228);
    font-family: 'Source Code Pro', monospace;
    font-size: 150%;
    margin-left: 1vw;
}

.navitem {
    text-decoration: none;
    list-style-type: none;
    margin-left: 1vw; 
    font-size: 2vw;
    color: rgb(236, 228, 228);
    transition: 300ms;
    border-radius: 14px;
    :hover:not(.logo) {
        color: rgb(142, 211, 15);
        transition: 300ms;
        border: 2px solid rgb(142, 211, 15);
        border-radius: 14px;
        padding: 3px;
    }
    .logo {
    font-size: 3vw;
    color: greenyellow;
    padding-bottom: 1vw;

    }
}

img {
    width: 50vw;
    height: auto;
    border: greenyellow 5px solid;
    border-radius: 15px;
}

.whiteImg {
  background-color: white;
  padding: 9px;
}
    
.imgdiv {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 5vw;
}

.lyceumlogo {
    width: 100%;
    display: flex;
    justify-content: center;
}

/* Typen effect */
.typewriter h1 {
    overflow: hidden; 
    border-right: .15em solid greenyellow; /* The typwriter cursor */
    white-space: nowrap; /* Keeps the content on a single line */
    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
    letter-spacing: .15em; /* Adjust as needed */
    animation: 
      typing 3.5s steps(40, end),
      blink-caret .75s step-end infinite;
  }
  
  /* The typing effect */
  @keyframes typing {
    from { width: 0 }
    to { width: 100% }
  }
  
  /* The typewriter cursor effect */
  @keyframes blink-caret {
    from, to { border-color: transparent }
    50% { border-color: greenyellow; }
  }

/* Login css */
#main-holder {
    height: 70%;
    display: grid;
    justify-items: center;
    align-items: center;
  }
  
  #login-error-msg-holder {
    width: 100%;
    height: 100%;
    display: grid;
    justify-items: center;
    align-items: center;
  }
  
  #login-error-msg {
    width: 23%;
    text-align: center;
    margin: 0;
    padding: 5px;
    font-size: 12px;
    font-weight: bold;
    color: #8a0000;
    border: 1px solid #8a0000;
    background-color: #e58f8f;
    opacity: 0;
  }
  
  #error-msg-second-line {
    display: block;
  }
  
  #login-form {
    align-self: flex-start;
    display: grid;
    justify-items: center;
    align-items: center;
  }
  
  .login-form-field::placeholder {
    color: gray;
  }
  
  .login-form-field {
    border: none;
    border-bottom: 1px solid #3a3a3a;
    margin-bottom: 10px;
    border-radius: 3px;
    outline: none;
    padding: 0px 0px 5px 5px;
  }
  
  #login-form-submit {
    width: 100%;
    padding: 7px;
    border: 2px red;
    border-radius: 5px;
    color: black;
    font-weight: bold;
    background-color: greenyellow;
    cursor: pointer;
    transition: 50ms;
    :hover {
      background-color: rgb(202, 255, 123);
      transition: 50ms;
    }
  }

.active {
  color: greenyellow;
}

.gamecontainer {
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 100%;
}

.inputField {
  width: 70%;
  height: 50px;
  border: 2px solid greenyellow;
  border-radius: 5px;
  margin-bottom: 10px;
  padding: 10px;
  font-size: 20px;
  color: white;
  background-color: black;
  outline: none;
}

.PTA {
  display: block;
  width: 50vw;
  height: 50vw;
}

#uitwerkingen {
  display: block;
  width: 50vw;
  height: 50vw;
}

#scoutingsvg {
  width: 20%;
  height: auto;
  position: fixed;
  top: 100px;
  right: 100px;
}

.overmijtext {
  width: 70%;
}

